--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "cross-env NODE_ENV=production vite build",
+     "build": "cross-env NODE_ENV=production vite build && type nul > dist/.nojekyll",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build"
