--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-     "build": "cross-env NODE_ENV=production vite build && type nul > dist/.nojekyll",
+    "build": "vite build",
+    "deploy": "gh-pages -d dist -b gh-pages",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build"
@@ -21,6 +22,7 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "cross-env": "^7.0.3",
+    "gh-pages": "^6.3.0",
     "npm-run-all2": "^7.0.2",
     "typescript": "~5.8.0",
     "unplugin-auto-import": "^19.2.0",
